# CodeMate.ai-Hackathon

./: .gitignore  DEPLOYMENT.md  README.md  index.html  main.py  nixpacks.toml  railway.toml  requirements.txt
backend/: README.md  command_processor.py  commands_list.py  main.py  pyproject.toml  requirements.txt  setup.py
frontend/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Terminal.tsx  TerminalInput.tsx  TerminalStatus.tsx  ThemeProvider.tsx
frontend/src/hooks/: useTerminal.ts
src/: index.css
src/components/: TerminalHeader.tsx  TerminalInput.tsx  TerminalOutput.tsx
src/hooks/: useTerminal.ts
src/pages/: Index.tsx
