[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tyeetale-terminal-backend"
version = "1.0.0"
description = "Backend API for Tyeetale Terminal"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "psutil==5.9.6",
    "pydantic==2.5.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port $PORT"
